REF Minor improvements